--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -9,9 +9,6 @@
   vertical-align: middle;
   text-align: center;
 }
-#content-pieces-table .tablesorter-header-inner {
-  font-size: inherit;
-}
 #content-pieces-table td {
   font-size: 0.6em;
   word-wrap: break-word;
@@ -21,6 +18,34 @@
   font-size: 0.9em;
   padding: 7px;
   min-width: inherit;
+}
+#content-pieces-table .tablesorter-header-inner {
+  font-size: inherit;
+}
+table .tablesorter-header {
+  background-image: url(../../img/bg.gif);
+  cursor: pointer;
+  font-weight: bold;
+  background-repeat: no-repeat;
+  background-position: center right;
+  padding-left: 20px;
+  border-right: 1px solid #dad9c7;
+  margin-left: -1px;
+}
+table .tablesorter-header.tablesorter-headerAsc {
+  background-image: url(../../img/asc.gif);
+  background-color: #3399FF;
+}
+table .tablesorter-header.tablesorter-headerDesc {
+  background-image: url(../../img/desc.gif);
+  background-color: #3399FF;
+}
+.checkbox label:after {
+  left: 1px;
+}
+#check_all_div {
+  box-shadow: 6px 0px 15px 6px #8b91a0;
+  background-color: #8b91a0;
 }
 /* ---------------------------
    ADMIN CONTENT PIECE AND QUIZ/LECTURE FIXES -----------
@@ -224,5 +249,35 @@
   .report-container .xl-report i {
     font-size: 0.8em;
   }
+}
+/* ---------------------------
+   QUESTION ANALYSIS  -----------
+ ---------------------------
+*/
+.question-filter {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-flex-wrap: wrap;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+}
+.question-filter > div {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding-right: 10px;
+}
+.question-filter > div input[type='text'] {
+  width: 100%;
+  font-weight: 400;
+  font-size: 0.75em;
+  color: #000;
 }
 /*# sourceMappingURL=admin.css.map */
