--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -8,32 +8,64 @@
 
 #content-pieces-table{
 	table-layout: fixed;
-}
-
-#content-pieces-table  tr  th{
-	vertical-align: middle;
-	text-align: center;
-}
-
-#content-pieces-table .tablesorter-header-inner{
-	font-size: inherit;
-}
-
-
-#content-pieces-table  td{
-	font-size: 0.6em;
-	word-wrap: break-word;
-	text-align: center;
-}
-
-
-#content-pieces-table  td > span.label{
-	font-size: 0.9em;
-    padding: 7px;
-    min-width: inherit;
+  tr{
+    th{
+      vertical-align: middle;
+      text-align: center;
+    }
+  }
+  td{
+    font-size: 0.6em;
+    word-wrap: break-word;
+    text-align: center;
+    & > span.label{
+      font-size: 0.9em;
+      padding: 7px;
+      min-width: inherit;
+    }
+  }
+  .tablesorter-header-inner{
+    font-size: inherit;
+  }
 }
 
 
+// Sort
+
+table{
+    .tablesorter-header{
+    background-image: url(../../img/bg.gif); 
+    cursor: pointer; 
+    font-weight: bold; 
+    background-repeat: no-repeat; 
+    background-position: center right; 
+    padding-left: 20px; 
+    border-right: 1px solid #dad9c7; 
+    margin-left: -1px;
+    &.tablesorter-headerAsc{
+      background-image: url(../../img/asc.gif); 
+      background-color: #3399FF;
+    }
+    &.tablesorter-headerDesc{
+      background-image: url(../../img/desc.gif); 
+      background-color: #3399FF;
+    }
+  }
+}
+
+
+.checkbox{
+  label{
+    &:after{
+      left: 1px;
+    }
+  }
+}
+
+#check_all_div{
+  box-shadow: 6px 0px 15px 6px #8b91a0;
+  background-color: #8b91a0;
+}
 
 
 /* ---------------------------
@@ -274,5 +306,30 @@
     font-size: 0.8em;
   }
 }
+
+
+/* ---------------------------
+   QUESTION ANALYSIS  -----------
+ ---------------------------
+*/
+
+
+.question-filter{
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  & > div{
+    flex: 1;
+    padding-right: 10px;
+    input[type='text']{
+      width: 100%;
+      font-weight: 400;
+      font-size: 0.75em;
+      color: #000;
+    }
+  }
+}
+
+
 
 
