take quiz page text centre

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/templates/quiz-layout.html
@@ -29,7 +29,8 @@
     {{^studentTrainingModule}}
         <div class="direction text-center">
                 <div class="icon goto-prev-page"><a href="javascript:" class="btn fab-content"><i class="fa fa-hand-o-left"></i></a></div>
-                <p class="welcome-text">It's time to take a quiz</p>
+                <p class="welcome-text">Go Back</p>
+                <p class="welcome-text fullWidth">It's time to take a quiz</p>
         </div>
     {{/studentTrainingModule}}
     {{#studentTrainingModule}}
