--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -752,6 +752,11 @@ nav {
                 color: lighten(@quiz-link-color1, 10%);
             }
         }
+        &.fullWidth{
+            flex: 1;
+            padding-left: 0;
+            padding-right: 80px;
+        }
     }
     .duration {
         .flex(1);
