--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -178,6 +178,10 @@
 						    		opacity: 1;
 						    		transform: translate(0,0);
 						    	}
+						    }
+						    &:after{
+						    	content: '';
+						    	display: inline-block;						    	
 						    }					    	
 					    }
 	             	}	             	
