--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -542,6 +542,14 @@ lesshat-selector {
 .direction .welcome-text a:hover {
   color: #8cc8c6;
 }
+.direction .welcome-text.fullWidth {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding-left: 0;
+  padding-right: 80px;
+}
 .direction .duration {
   -webkit-box-flex: 1;
   -webkit-flex: 1;
@@ -3490,6 +3498,10 @@ lesshat-selector {
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
+}
+#myCanvas-miki .cbp_tmtimeline > li .contentPiece .qstnStatus .comment-label.comment-active:after {
+  content: '';
+  display: inline-block;
 }
 #myCanvas-miki .cbp_tmtimeline > li .contentPiece .text-warning i:before {
   content: "\f0a9";
