--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -31,7 +31,7 @@
         </button>
         {{/show_hint}}
         {{#show_skip}}
-            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
+            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small skip-button">
                 Skip <i class="fa fa-step-forward"></i>
             </button>
         {{/show_skip}}
@@ -49,7 +49,7 @@
     <!-- <span class="pull-left small" id="first_question"></span> -->
   
         {{#show_skip}}
-            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small">
+            <button type="button" id="skip-question" class="btn btn-default btn-sm btn-small skip-button ">
                 Skip <i class="fa fa-step-forward"></i>
             </button>
         {{/show_skip}}
