--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -161,6 +161,16 @@
                     }
                 }
             }
+            .ansFalse,.ansRight,.ansWrong{
+                opacity: 0.5;
+                pointer-events: none;
+                .mcq-option-select{
+                    opacity: 0.4;
+                }
+                &.ansRight{
+                    opacity: 0.8;
+                }
+            }
         } 
     }
 }
