--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -2747,6 +2747,11 @@ lesshat-selector {
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
 }
+@media only screen and (min-width: 1601px) and (max-width: 1920px) {
+  #quiz-progress-region .quizProgress {
+    width: 300px;
+  }
+}
 @media only screen and (max-width: 1024px) {
   #quiz-progress-region .quizProgress {
     top: 35px;
@@ -2759,6 +2764,11 @@ lesshat-selector {
 }
 #quiz-progress-region .quizProgress.progress-expand {
   left: -260px;
+}
+@media only screen and (min-width: 1601px) and (max-width: 1920px) {
+  #quiz-progress-region .quizProgress.progress-expand {
+    left: -300px;
+  }
 }
 @media (max-width: 1230px) {
   #quiz-progress-region .quizProgress.progress-expand {
@@ -2787,6 +2797,11 @@ lesshat-selector {
   cursor: pointer;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
+}
+@media only screen and (min-width: 1601px) and (max-width: 1920px) {
+  #quiz-progress-region .quizProgress .progressStrip {
+    left: 300px;
+  }
 }
 @media only screen and (max-width: 1024px) {
   #quiz-progress-region .quizProgress .progressStrip {
