comment modal styled

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -755,7 +755,7 @@ nav {
         &.fullWidth{
             flex: 1;
             padding-left: 0;
-            padding-right: 80px;
+            padding-right: 8em;
         }
     }
     .duration {
@@ -835,3 +835,32 @@ nav {
         }
     }
 }
+
+
+.comment-modal{
+    &.modal{
+        .modal-header{
+            background: @dashboard-color;
+        }
+        .modal-body{
+            background-color: transparent;
+        }
+        .modal-footer{
+            button{
+                color: @color-white;
+                border: 0;
+                color: #fff;
+                padding: 8px;
+                width: 20%;
+                text-transform: uppercase;
+                .box-shadow(0 2px 5px 0 rgba(0, 0, 0, 0.2));
+                &.cancel{
+                    background: @button-1-danger;
+                }
+            }
+        }
+    }    
+}
+
+
+
