--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -36,11 +36,32 @@
             {{#hint}}
                 <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
-            {{#comment}}
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}}</span>
-                <div class="full-comment">{{comment}}</div>
+            
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">This is the full comment asdfsd asfdas asf a as shown in modal full comment version<span class="more" data-toggle="modal" data-target="#comment-modal">More</span></span>
+                <div class="full-comment">This is the full comment asdfsd asfdas asf a as shown in modal full comment version</div>
+
+                <!-- Modal -->
+
+                <div class="modal fade comment-modal" id="comment-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <h4 class="modal-title" id="myModalLabel">Comments</h4>
+                      </div>
+                      <div class="modal-body">
+                        This is the full comment asdfsd asfdas asf a as shown in modal full comment version
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-default cancel" data-dismiss="modal">Cancel</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+
             </label>
-            {{/comment}}
+      
          
         </div>
     {{/responseStatus}}
