--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -548,7 +548,7 @@ lesshat-selector {
       -ms-flex: 1;
           flex: 1;
   padding-left: 0;
-  padding-right: 80px;
+  padding-right: 8em;
 }
 .direction .duration {
   -webkit-box-flex: 1;
@@ -615,6 +615,24 @@ lesshat-selector {
 }
 #logout-modal.modal .modal-footer button.confirm {
   background: #69b8b5;
+}
+.comment-modal.modal .modal-header {
+  background: #69b8b5;
+}
+.comment-modal.modal .modal-body {
+  background-color: transparent;
+}
+.comment-modal.modal .modal-footer button {
+  color: #ffffff;
+  border: 0;
+  color: #fff;
+  padding: 8px;
+  width: 20%;
+  text-transform: uppercase;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
+}
+.comment-modal.modal .modal-footer button.cancel {
+  background: #f2593a;
 }
 .signin-header {
   padding: 15px 0 35px 0;
