show more comment styled

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -185,12 +185,13 @@
 						    .more{
 						    	display: block;
 						    	position: absolute;
-							    bottom: 4px;
-							    right: 0;
+							    bottom: 5px;
+							    right: -28px;
 							    color: #f2593a;
-							    box-shadow: 1px 18px 2px 16px rgba(255, 255, 255, 0.77);
+							    // box-shadow: 1px 18px 2px 16px rgba(255, 255, 255, 0.77);
 							    background-color: #fff;
 							    cursor: pointer;
+							    font-size: 0.85em;
 						    }					    	
 					    }
 	             	}	             	
