--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -32,26 +32,26 @@
 
 // Sort
 
-table{
-    .tablesorter-header{
-    background-image: url(../../img/bg.gif); 
-    cursor: pointer; 
-    font-weight: bold; 
-    background-repeat: no-repeat; 
-    background-position: center right; 
-    padding-left: 20px; 
-    border-right: 1px solid #dad9c7; 
-    margin-left: -1px;
-    &.tablesorter-headerAsc{
-      background-image: url(../../img/asc.gif); 
-      background-color: #3399FF;
-    }
-    &.tablesorter-headerDesc{
-      background-image: url(../../img/desc.gif); 
-      background-color: #3399FF;
-    }
-  }
-}
+// table{
+//     .tablesorter-header{
+//     background-image: url(../../img/bg.gif); 
+//     cursor: pointer; 
+//     font-weight: bold; 
+//     background-repeat: no-repeat; 
+//     background-position: center right; 
+//     padding-left: 20px; 
+//     border-right: 1px solid #dad9c7; 
+//     margin-left: -1px;
+//     &.tablesorter-headerAsc{
+//       background-image: url(../../img/asc.gif); 
+//       background-color: #3399FF;
+//     }
+//     &.tablesorter-headerDesc{
+//       background-image: url(../../img/desc.gif); 
+//       background-color: #3399FF;
+//     }
+//   }
+// }
 
 
 .checkbox{
