similar button background change

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -67,7 +67,7 @@
     
 
     {{#allow_submit_answer}}   
-   <button type="button" id="submit-question" class="btn btn-success submit-single">
+   <button type="button" id="submit-question" class="btn btn-success submit-single bottom-submit">
         Submit <i class="fa fa-forward"></i> 
     </button>
     {{/allow_submit_answer}}
