--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3312,6 +3312,51 @@ lesshat-selector {
 .quizActions button i:before {
   padding-left: 5px;
 }
+.quizActions__cont {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.quizActions__cont .quiz-btn:first-child {
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 26%;
+      -ms-flex: 0 0 26%;
+          flex: 0 0 26%;
+}
+.quizActions__cont .quiz-btn .hint {
+  width: 100%;
+  background-color: #69b8b5;
+  color: #fff;
+}
+.quizActions__cont .quiz-btn .hint i {
+  color: #ffff28;
+}
+.quizActions__cont .quiz-btn:last-child {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+  -webkit-flex: 0 0 54%;
+      -ms-flex: 0 0 54%;
+          flex: 0 0 54%;
+}
+.quizActions__cont .quiz-btn button {
+  width: 100%;
+  margin-right: 10px;
+}
+.quizActions__cont .quiz-btn .bottom-submit {
+  margin-right: 0;
+}
 .quizActions #submit-question {
   background: #FF8685;
 }
