replay hint and comment section added

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/single-question/templates/question-area-tpl.html
@@ -127,6 +127,20 @@
 </div>
 
 
+<!-- quiz details -->
+
+    <div class="quiz-info">
+        <div class="cards quiz-info__hint">
+            <h2><i class="fa fa-lightbulb-o"></i>Hint</h2>
+            <div class="data">Hint please</div>
+        </div>
+        <div class="cards quiz-info__comment">
+            <h2><i class="fa fa-comment"></i>Comment</h2>
+            <div class="data">Comment please</div>
+        </div>
+    </div>
+
+
 
 
 
