--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -799,6 +799,45 @@
 
  }
 
+.quiz-info{
+    margin: 20px 0;
+    .cards{
+        margin-bottom: 15px;
+        padding: 15px;
+        background: #f2f2f2;
+        border-radius: 5px;
+        box-shadow: 0 0 4px 0px rgba(0, 0, 0, 0.15);
+        h2{
+            margin: 0 0 5px 0;
+            font-size: 1.15em;
+            display: inline-block;
+            i{
+                font-size: 1.4em;
+                vertical-align: middle;
+                margin-right: 5px;
+            }
+        }
+        .data{
+            line-height: 1.5;
+            margin-left: 15px;
+        }
+    }
+    &__hint{
+        border-left: 3px solid @dashboard-color;
+        i{
+            color: @dashboard-color;
+        }
+    }
+    &__comment{
+        border-left: 3px solid #a2a7a2;
+        i{
+            font-size: 1.1em;
+            color: #a2a7a2;
+            vertical-align: inherit;
+        }
+    }
+}
+
 
 
  // ---------------------------
