question summary white space reduced

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -19,7 +19,7 @@
         </div>
     </div>
     {{#responseStatus}}
-        <div class="qstnStatus {{statusUI.divClass}} p-t-10">
+        <div class="qstnStatus {{statusUI.divClass}}">
             {{#display_answer}}
                 <i class="fa"></i>
                 <!-- <label>
@@ -90,7 +90,7 @@
         </div>
     </div>
     {{#responseStatus}}
-        <div class="qstnStatus {{statusUI.divClass}} p-t-10">
+        <div class="qstnStatus {{statusUI.divClass}}">
             {{#display_answer}}
                 <label>
                     {{&statusUI.text}} <span class="fa  {{statusUI.icon}}"></span>  
