--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -143,6 +143,8 @@
 						    z-index: 1;
 						    background: #69b8b5;
 						    color: #fff;
+						    width: 85%;
+    						margin: 0 auto;
 						    padding: 8px;
 						    right: 0;
 						    left: 0;
