checkbox css modified

--- a/wp-content/themes/walnut/walnut/dev/css/admin.css
+++ b/wp-content/themes/walnut/walnut/dev/css/admin.css
@@ -22,7 +22,7 @@
 #content-pieces-table .tablesorter-header-inner {
   font-size: inherit;
 }
-.checkbox label:after {
+.table .checkbox label:after {
   left: 1px;
 }
 #check_all_div {
