--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -53,14 +53,16 @@
 //   }
 // }
 
-
-.checkbox{
-  label{
-    &:after{
-      left: 1px;
+.table{
+  .checkbox{
+    label{
+      &:after{
+        left: 1px;
+      }
     }
   }
 }
+
 
 #check_all_div{
   box-shadow: 6px 0px 15px 6px #8b91a0;
