submit button hover added

--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_practice-quiz.less
@@ -762,6 +762,9 @@
     }
     #submit-question.bottom-submit{
         background: #f96649 !important;
+        &:hover{
+            background: #fd7574 !important;
+        }
     }
     #skip-question{
         background: transparent;
