--- a/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/css/style.css
@@ -3379,6 +3379,9 @@ lesshat-selector {
 .quizActions #submit-question.bottom-submit {
   background: #f96649 !important;
 }
+.quizActions #submit-question.bottom-submit:hover {
+  background: #fd7574 !important;
+}
 .quizActions #skip-question {
   background: transparent;
   color: #AFABAB;
