--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_quiz-summary.less
@@ -121,6 +121,11 @@
 	             	line-height: 40px;
 	             	// width: 200px;
 	             	width: 350px;
+	             	height: 107%;
+    				display: flex;
+    				flex-direction: column;
+    				align-items: center;
+    				justify-content: center;
 	             	@media screen and (min-width: 1305px) and (max-width: 1400px) {
 	             		right: -90px;
 	             		width: 275px;
