--- a/wp-content/themes/walnut/walnut/dev/css/less/admin.less
+++ b/wp-content/themes/walnut/walnut/dev/css/less/admin.less
@@ -345,6 +345,8 @@
   }
 }
 
+// Questions Checkbox fix
+
 #mcq-container{
    &.mcq{
         .ansFalse,.ansRight,.ansWrong{
@@ -359,5 +361,34 @@
         }
     } 
 }
+
+
+
+// Comment more
+
+.comment-label{
+    display: -webkit-box;
+    line-height: 1.4;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    .more{
+        display: block;
+        position: absolute;
+        bottom: 5px;
+        right: -17px;
+        color: #f2593a;
+        cursor: pointer;
+        font-size: 0.85em;
+        @media screen and (max-width: 1400px) {
+            right: -31px;
+        }
+    }
+}
+
+
+
+
 
 
