--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -106,9 +106,9 @@
             {{#hint}}
                 <label class="small-text text-grey db">Viewed Hint: <span class="bold">{{hint_viewed}}<span></label>
             {{/hint}}
-            {{#comment}}
+           
             
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}} {{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">More</span>{{/comment_modal}}</span>
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">asdfsadf asdfasfd asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfsfd s <span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">More</span></span>
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
                 <!-- Modal -->
@@ -131,7 +131,7 @@
 
 
             </label>
-            {{/comment}}
+            
         </div>
     {{/responseStatus}}
 
