--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -108,11 +108,11 @@
             {{/hint}}
            
             
-            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">asdfsadf asdfasfd asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfasdf asdfsfd s <span class="more" data-toggle="modal" data-target="#comment-modal{{commentId}}">More</span></span>
+            <label class="small-text text-grey db comment-label comment-active">Comment: <span class="bold">{{comment}} {{#comment_modal}}<span class="more" data-toggle="modal" data-target="#comment-modal{{commentIdAdmin}}">More</span>{{/comment_modal}}</span>
                 <!-- <div class="full-comment">{{comment}}</div> -->
 
                 <!-- Modal -->
-                <div class="modal fade comment-modal" id="comment-modal{{commentId}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+                <div class="modal fade comment-modal" id="comment-modal{{commentIdAdmin}}" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
                       <div class="modal-header">
